--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -51,6 +51,7 @@
         background-color: rgb(200, 200, 200);
         color: rgb(0, 0, 0);
         cursor: pointer;
+
     }
     .navTop .toggleBtn {
         width: 40px;
@@ -60,6 +61,7 @@
         font-size: large;
         background-color: rgb(235, 235, 235);
         border: none;
+        outline: none;
         cursor: pointer;
     }
     .navTop .toggleBtn:hover {
@@ -96,16 +98,16 @@
         background-color: rgba(255, 135, 0, 0.5);
     }
     .navTop ul li.userInfo {
-        font-size: 20px;
+        font-size: 18px;
         margin-right: 10px;
-        width: 130px;
+        width: 150px;
         display: flex;
         align-items: center;
         cursor: pointer;
     }
     .navTop ul li.userInfo:hover {
         color: rgb(255, 135, 0);
-        transform: scale(1.1);
+        transform: scale(1.15);
         transition: all 0.3s ease-out;
         text-decoration: underline;
     }
@@ -114,28 +116,4 @@
         height: 30px;
         border-radius: 50%;
         margin-right: 10px;
-    }
-    .navTop ul li ol {
-        display: none;
-        position: absolute;
-        top: 40px;
-        left: 0;
-        width: 150px;
-        background-color: rgb(235, 235, 235);
-        border-radius: 20px;
-        list-style: none;
-        padding: 10px 0;
-    }
-    .navTop ul li:hover ol {
-        display: block;
-    }
-    .navTop ul li ol li {
-        width: 100%;
-        margin: 5px 0;
-        text-align: center;
-        font-size: 16px;
-        cursor: pointer;
-    }
-    .navTop ul li ol li:hover {
-        background-color: rgba(255, 135, 0, 0.5);
     }
