--- a/app/assets/css/login.css
+++ b/app/assets/css/login.css
@@ -74,6 +74,7 @@
     width: 250px;
     height: 40px;
     border-radius: 20px;
+    font-size: 18px;
     border: none;
     outline: none;
     background-color:rgba(235, 235, 235, 0.6);
